--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -18,14 +18,14 @@ td { /* Looks like a Firefox bug... */
 }
 
 #container {
-	width: 600px;
+	width: 650px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #header {
 	text-align: center;
-	margin-top: 25px;
+	margin-top: 10px;
 	margin-bottom: 25px;
 }
 
@@ -49,8 +49,12 @@ td { /* Looks like a Firefox bug... */
 	text-align: left;
 }
 
+h1{
+	font-size: 18px;		
+}
+
 h2 {
-	margin-bottom: 5px;
+	font-size: 16px;
 }
 
 div.login {
